--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ wheel>=0.29
 numpy
 pandas
 scikit-learn
+string
+nltk
 
 # tests/linter
 black
@@ -15,6 +17,13 @@ coverage
 flake8
 pytest
 yapf
+
+# Data Vis
+spacy
+scattertext
+wordcloud
+folium
+matplotlib
 
 # API
 gcsfs
@@ -27,3 +36,4 @@ six>=1.14
 joblib
 memoized-property
 termcolor
+pickle
