--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,12 @@ joblib
 memoized-property
 termcolor
 pickle
+
+#app
+streamlit
+pyecharts
+streamlit_echarts
+streamlit_folium
+base64
+requests
+time
